// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoxedRefreshIndicator Should match all-properties snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "height": 100,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    accessibilityHint="Wait for the content load"
    accessibilityLabel="Loading"
    accessibilityRole="progressbar"
    accessible={true}
    importantForAccessibility="no-hide-descendants"
    style={
      Object {
        "height": 48,
        "width": 48,
      }
    }
    testID="refreshIndicator"
  >
    <View
      collapsable={false}
      style={
        Object {
          "transform": Array [
            Object {
              "rotateZ": "0deg",
            },
          ],
        }
      }
      testID="LoadingSpinnerAnimatedTestID"
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={48}
        bbWidth={48}
        fill="none"
        focusable={false}
        height={48}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "flex": 0,
              "height": 48,
              "width": 48,
            },
          ]
        }
        vbHeight={48}
        vbWidth={48}
        width={48}
      >
        <RNSVGGroup
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  736995,
                  1,
                  -16040221,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="spinner-secondHalf"
              x1="0%"
              x2="100%"
              y1="0%"
              y2="0%"
            />
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  -16040221,
                  1,
                  -16040221,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="spinner-firstHalf"
              x1="0%"
              x2="100%"
              y1="0%"
              y2="0%"
            />
          </RNSVGDefs>
          <RNSVGGroup
            fill={
              Object {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              Array [
                "strokeWidth",
              ]
            }
            strokeWidth={5}
          >
            <RNSVGPath
              d="M 2.5 24 A 21.5 21.5 0 0 1 45.5 24"
              fill={
                Object {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              propList={
                Array [
                  "stroke",
                ]
              }
              stroke={
                Object {
                  "brushRef": "spinner-secondHalf",
                  "type": 1,
                }
              }
            />
            <RNSVGPath
              d="M 45.5 24 A 21.5 21.5 0 0 1 2.5 24"
              fill={
                Object {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              propList={
                Array [
                  "stroke",
                ]
              }
              stroke={
                Object {
                  "brushRef": "spinner-firstHalf",
                  "type": 1,
                }
              }
            />
            <RNSVGPath
              d="M 2.5 24 A 21.5 21.5 0 0 1 2.5 22.75"
              fill={
                Object {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              propList={
                Array [
                  "stroke",
                  "strokeLinecap",
                ]
              }
              stroke={
                Object {
                  "payload": 4278927075,
                  "type": 0,
                }
              }
              strokeLinecap={1}
            />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
  <Text>
    This is the caption
  </Text>
  <Text>
    This is the action
  </Text>
</View>
`;

exports[`BoxedRefreshIndicator Should match base snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "height": 100,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityHint="Wait for the content load"
    accessibilityLabel="Loading"
    accessibilityRole="progressbar"
    accessible={true}
    importantForAccessibility="no-hide-descendants"
    style={
      Object {
        "height": 48,
        "width": 48,
      }
    }
    testID="refreshIndicator"
  >
    <View
      collapsable={false}
      style={
        Object {
          "transform": Array [
            Object {
              "rotateZ": "0deg",
            },
          ],
        }
      }
      testID="LoadingSpinnerAnimatedTestID"
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={48}
        bbWidth={48}
        fill="none"
        focusable={false}
        height={48}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "flex": 0,
              "height": 48,
              "width": 48,
            },
          ]
        }
        vbHeight={48}
        vbWidth={48}
        width={48}
      >
        <RNSVGGroup
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  736995,
                  1,
                  -16040221,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="spinner-secondHalf"
              x1="0%"
              x2="100%"
              y1="0%"
              y2="0%"
            />
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  -16040221,
                  1,
                  -16040221,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="spinner-firstHalf"
              x1="0%"
              x2="100%"
              y1="0%"
              y2="0%"
            />
          </RNSVGDefs>
          <RNSVGGroup
            fill={
              Object {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              Array [
                "strokeWidth",
              ]
            }
            strokeWidth={5}
          >
            <RNSVGPath
              d="M 2.5 24 A 21.5 21.5 0 0 1 45.5 24"
              fill={
                Object {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              propList={
                Array [
                  "stroke",
                ]
              }
              stroke={
                Object {
                  "brushRef": "spinner-secondHalf",
                  "type": 1,
                }
              }
            />
            <RNSVGPath
              d="M 45.5 24 A 21.5 21.5 0 0 1 2.5 24"
              fill={
                Object {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              propList={
                Array [
                  "stroke",
                ]
              }
              stroke={
                Object {
                  "brushRef": "spinner-firstHalf",
                  "type": 1,
                }
              }
            />
            <RNSVGPath
              d="M 2.5 24 A 21.5 21.5 0 0 1 2.5 22.75"
              fill={
                Object {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              propList={
                Array [
                  "stroke",
                  "strokeLinecap",
                ]
              }
              stroke={
                Object {
                  "payload": 4278927075,
                  "type": 0,
                }
              }
              strokeLinecap={1}
            />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;
